@@ -3,6 +3,15 @@ X3 ChangeLog
 
 2009-11-24  Henrik Stuart  <evilnet@hstuart.dk>
 
+	* src/nickserv.h src/nickserv.c: add extra parameter to reg_auth_func and
+	auth_func_t.
+
+	* src/chanserv.c src/mod-snoop.c src/global.c src/mod-helpserv.c
+	src/opserv.c src/mod-memoserv.c src/mod-track.c: collateral evolution
+	fixes due to auth_func change.
+
+2009-11-24  Henrik Stuart  <evilnet@hstuart.dk>
+
 	* src/nickserv.h src/proto-common.c: add extra parameter to
 	reg_user_mode_func and user_mode_func_t.
 
